# ukcompanies

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api-reference.md
docs/architecture/: error-handling-strategy.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md
src/ukcompanies/: __init__.py  auth.py  client.py  client_endpoints.py  config.py  exceptions.py  retry.py
src/ukcompanies/cli/: main.py
src/ukcompanies/models/: __init__.py  appointment.py  base.py  charge.py  company.py  disqualification.py  officer.py
tests/integration/: test_company_endpoints.py  test_document_endpoints.py  test_filing_endpoints.py  test_officer_endpoints.py  test_package_installation.py  test_retry_logic.py  test_search_endpoints.py
tests/unit/: test_appointments.py  test_auth.py  test_charges.py  test_client.py  test_company.py  test_config.py  test_disqualifications.py  test_document.py  test_exceptions.py  test_filing.py  test_init.py  test_models.py  test_officer.py  test_retry.py  test_search.py
